--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,6 @@ header ul li a:link {
   color: #fff !important;
   border-radius: 0.4rem;
   padding: 0.8rem 1.2rem;
-  width: 30%;
   text-decoration: none;
   text-align: center;
 }
@@ -127,8 +126,8 @@ ion-icon {
 
 .image2 {
   text-align: center;
-  width: 300;
-  height: 100;
+  width: 100%;
+  /* height: 100; */
 }
 
 .line {
